test: Add test case from bug-40410
Exercises a case where we failed to fill a rectangle...

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -54,6 +54,7 @@ REFERENCE_IMAGES = \
 	bilevel-image.ref.png \
 	bitmap-font.ref.png \
 	bitmap-font.rgb24.ref.png \
+	bug-40410.ref.png \
 	bug-bo-rectangular.image16.ref.png \
 	bug-bo-rectangular.ps.xfail.png \
 	bug-bo-rectangular.ref.png \
