test: Add big-empty-box
Another variant on big-little-box, to make sure we trim the extents
before doing the empty unbounded fixup.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -44,6 +44,8 @@ REFERENCE_IMAGES = \
 	arc-looping-dash.ps.ref.png \
 	arc-looping-dash.quartz.ref.png \
 	arc-looping-dash.ref.png \
+	big-empty-box.argb32.ref.png \
+	big-empty-box.rgb24.ref.png \
 	big-line.image16.ref.png \
 	big-line.ps.ref.png \
 	big-line.quartz.ref.png \
