--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -15,6 +15,7 @@ test_sources = \
 	arc-looping-dash.c				\
 	api-special-cases.c				\
 	big-line.c					\
+	big-empty-box.c					\
 	big-little-box.c				\
 	big-little-triangle.c				\
 	big-trap.c					\
