--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -48,6 +48,7 @@ cairo_perf_micro_DEPENDENCIES = \
 
 libcairoperf_la_SOURCES = \
 	$(libcairoperf_sources)	\
+	$(libcairoperf_external_sources)
 	$(libcairoperf_headers)
 
 cairo_analyse_trace_SOURCES = \
