cairo-missing: Fix build
The cairo-missing code contains multiple typos and uses
_cairo_*alloc*() functions without including cairo-malloc-private.h

--- a/util/cairo-missing/Makefile.win32
+++ b/util/cairo-missing/Makefile.win32
@@ -6,5 +6,5 @@ all: inform $(CFG)/libcairo-missing.lib
 
 libcairo_missing_OBJECTS = $(patsubst %.c, $(CFG)/%-static.obj, $(libcairo_missing_sources))
 
-$(CFG)/libcairo-script-interpreter.lib: $(libcairo_missing_OBJECTS)
-	@$(AR) $(CAIRO_ARFLAGS) -OUT:$@ $(libcairo_missing_OBJECTS)
+$(CFG)/libcairo-missing.lib: $(libcairo_missing_OBJECTS)
+	@$(AR) $(CAIRO_ARFLAGS) -OUT:$@ $^
