perf/micro: Add the PS tiger as a measure for the antialias hints
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/perf/micro/Makefile.sources
+++ b/perf/micro/Makefile.sources
@@ -20,6 +20,7 @@ libcairo_perf_micro_sources = \
 	subimage_copy.c		\
 	tessellate.c		\
 	text.c			\
+	tiger.c			\
 	glyphs.c		\
 	twin.c			\
 	unaligned-clip.c	\
