test: Add ref image for random-clip
After applying geometric clip intersection, this is the acceptable
result.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -1019,6 +1019,7 @@ REFERENCE_IMAGES = \
 	radial-gradient.image16.ref.png \
 	radial-gradient.quartz.ref.png \
 	radial-gradient.ref.png \
+	random-clip.ref.png \
 	random-intersections-curves-eo.image16.ref.png \
 	random-intersections-curves-eo.pdf.ref.png \
 	random-intersections-curves-eo.ps.ref.png \
