build: Add missing cairo-surface-backend-private.h to sources

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -102,6 +102,7 @@ cairo_private = \
 	cairo-spans-compositor-private.h \
 	cairo-stroke-dash-private.h \
 	cairo-surface-private.h \
+	cairo-surface-backend-private.h \
 	cairo-surface-clipper-private.h \
 	cairo-surface-fallback-private.h \
 	cairo-surface-observer-private.h \
