--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -234,6 +234,7 @@ test_sources = \
 	push-group-path-offset.c			\
 	radial-gradient.c				\
 	radial-gradient-extend.c			\
+	radial-outer-focus.c				\
 	random-clips.c			\
 	random-intersections-eo.c			\
 	random-intersections-nonzero.c			\
