test: Add a1-fill
Capture the bug report:
https://bugs.freedesktop.org/show_bug.cgi?id=31604

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -1,6 +1,7 @@
 test_sources = \
 	a1-bug.c					\
 	a1-clip.c					\
+	a1-fill.c					\
 	a1-image-sample.c 				\
 	a1-mask.c					\
 	a1-mask-sample.c 				\
