--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -34,6 +34,9 @@ REFERENCE_IMAGES = \
 	reference/a1-clip-stroke.ref.png \
 	reference/a1-clip-stroke.traps.argb32.ref.png \
 	reference/a1-clip-stroke.traps.rgb24.ref.png \
+	reference/a1-fill.base.ref.png \
+	reference/a1-fill.ref.png \
+	reference/a1-fill.traps.ref.png \
 	reference/a1-image-sample.base.argb32.ref.png \
 	reference/a1-image-sample.base.rgb24.ref.png \
 	reference/a1-image-sample.gl.xfail.png \
