test: Record the current status of radial-outer-focus as xfail
Debate rages as to the correct way to handle this. In some ways the
current output is expected due to the numerical instability in handling
the inner-focus-on-the-outer-circle. However, the result looks less than
desirable so some solution (which may not be inside cairo per-se) is
sought.

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -2015,6 +2015,7 @@ REFERENCE_IMAGES = \
 	reference/radial-gradient.ref.png \
 	reference/radial-gradient.traps.argb32.ref.png \
 	reference/radial-gradient.traps.rgb24.ref.png \
+	reference/radial-outer-focus.xfail.png \
 	reference/random-clip.base.argb32.ref.png \
 	reference/random-clip.base.rgb24.ref.png \
 	reference/random-clip.ref.png \
