test: Make cairo_test_suite depend upon the any2ppm exectuable on all platforms
On some platforms, executables have an extension which confuses
automake into building an entirely different binary.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -98,7 +98,7 @@ cairo_test_suite_DEPENDENCIES = \
 	$(top_builddir)/src/libcairo.la
 if BUILD_ANY2PPM
 cairo_test_suite_DEPENDENCIES += \
-	any2ppm
+	any2ppm$(EXEEXT)
 endif
 
 if HAVE_SHM
