Make cairo-missing a static library
It was meant to be static, but my autotools-fu was not good enough.

--- a/util/cairo-missing/Makefile.am
+++ b/util/cairo-missing/Makefile.am
@@ -2,7 +2,7 @@ include $(top_srcdir)/util/cairo-missing/Makefile.sources
 
 AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_builddir)/src
 
-lib_LTLIBRARIES = libcairo-missing.la
+noinst_LTLIBRARIES = libcairo-missing.la
 
 libcairo_missing_la_SOURCES = \
 	$(libcairo_missing_sources)	\
