test: Add stroke-pattern
Poppler renders the PDF output of this test correctly with cairo 1.10.2 but fails with current git.

Commenting out the cairo_translate makes the PDF output render correctly with current git.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -291,6 +291,7 @@ test_sources = \
 	source-clip-scale.c				\
 	source-surface-scale-paint.c			\
 	spline-decomposition.c				\
+	stroke-pattern.c                                \
 	subsurface.c                                    \
 	subsurface-image-repeat.c                       \
 	subsurface-repeat.c                             \
