--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -2496,6 +2496,7 @@ REFERENCE_IMAGES = \
 	reference/stroke-open-box.ref.png \
 	reference/stroke-open-box.traps.argb32.ref.png \
 	reference/stroke-open-box.traps.rgb24.ref.png \
+	reference/stroke-pattern.ref.png \
 	reference/subsurface-image-repeat.base.argb32.ref.png \
 	reference/subsurface-image-repeat.base.rgb24.ref.png \
 	reference/subsurface-image-repeat.image16.ref.png \
