--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -300,6 +300,7 @@ test_sources = \
 	subsurface-modify-child.c                       \
 	subsurface-modify-parent.c                      \
 	subsurface-outside-target.c                     \
+	subsurface-scale.c                              \
 	subsurface-similar-repeat.c                     \
 	surface-finish-twice.c				\
 	surface-pattern.c				\
