test: Mark the record-select-font-face as XFAIL
The recording surface has no knowledge of the target surface when it
generates the scaled font and informs the client about the kerning and
metrics. This results in an unfortunate slight misalignment when
replaying the glyphs against the ideal case.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -2103,6 +2103,7 @@ REFERENCE_IMAGES = \
 	reference/record-paint.traps.argb32.ref.png \
 	reference/record-paint.traps.rgb24.ref.png \
 	reference/record-select-font-face.ref.png \
+	reference/record-select-font-face.xfail.png \
 	reference/record-self-intersecting.ref.png \
 	reference/record-text-transform.ref.png \
 	reference/recording-surface-extend-none.argb32.ref.png \
