test/random-clips: Paint clip to highlight the issues
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.refs
+++ b/test/Makefile.refs
@@ -2016,8 +2016,8 @@ REFERENCE_IMAGES = \
 	reference/radial-gradient.traps.argb32.ref.png \
 	reference/radial-gradient.traps.rgb24.ref.png \
 	reference/radial-outer-focus.xfail.png \
-	reference/random-clip.base.argb32.ref.png \
-	reference/random-clip.base.rgb24.ref.png \
+	reference/random-clip.base.argb32.xfail.png \
+	reference/random-clip.base.rgb24.xfail.png \
 	reference/random-clip.ref.png \
 	reference/random-clip.traps.argb32.ref.png \
 	reference/random-clip.traps.rgb24.ref.png \
