test: Add line-width-large-overlap
Exercise the case of stroking a box with a pen wider than the box
itself, a variation on line-width-overlap suggested by Paulo Zanoni.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -169,6 +169,7 @@ test_sources = \
 	leaky-dashed-stroke.c				\
 	leaky-polygon.c					\
 	line-width.c					\
+	line-width-large-overlap.c			\
 	line-width-overlap.c				\
 	line-width-scale.c				\
 	line-width-tolerance.c				\
