--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -57,6 +57,7 @@ test_sources = \
 	clip-nesting.c					\
 	clip-operator.c					\
 	clip-push-group.c				\
+	clip-rectilinear.c				\
 	clip-shape.c					\
 	clip-stroke.c					\
 	clip-stroke-no-op.c				\
