test: Add mime-surface-api
This test checks if setting and unsetting mime data works correctly. E.g. this
verifies that we get the same pointer back which we passed in (=no copy made).

This test currently crashes in its last call to cairo_surface_get_mime_data().

Signed-off-by: Uli Schlachter <psychon@znc.in>

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -202,6 +202,7 @@ test_sources = \
 	mesh-pattern-transformed.c		        \
 	mime-data.c					\
 	mime-surface.c					\
+	mime-surface-api.c				\
 	miter-precision.c				\
 	move-to-show-surface.c				\
 	new-sub-path.c					\
