test: Add clip-double-free
This test tries to exercise a double free bug in the clipping code.

My webkit-based browser recently crashed a lot. Here is the reason why.

Signed-off-by: Uli Schlachter <psychon@znc.in>

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -42,6 +42,7 @@ test_sources = \
 	clip-disjoint.c					\
 	clip-disjoint-hatching.c			\
 	clip-device-offset.c				\
+	clip-double-free.c				\
 	clip-draw-unbounded.c				\
 	clip-empty.c					\
 	clip-empty-group.c				\
