test: Add clip-polygons
To exercise the recent bug found in handling empty clip surfaces.

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -58,6 +58,7 @@ test_sources = \
 	clip-nesting.c					\
 	clip-operator.c					\
 	clip-push-group.c				\
+	clip-polygons.c					\
 	clip-rectilinear.c				\
 	clip-shape.c					\
 	clip-stroke.c					\
