test: Add text-antialias-subpixel-{,v}{bgr,rgb}
There were no tests for any subpixel order but rgb, so let's write something for
all four possibilities.

This is mostly copy&paste from test/text-antialias.c (and
text-antialias-subpixel-rgb does the same thing as text-antialias-subpixel).

Test for: https://bugs.freedesktop.org/show_bug.cgi?id=40456

Signed-off-by: Uli Schlachter <psychon@znc.in>

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -315,6 +315,7 @@ test_sources = \
 	surface-pattern-scale-down-extend.c		\
 	surface-pattern-scale-up.c			\
 	text-antialias.c				\
+	text-antialias-subpixel.c			\
 	text-cache-crash.c				\
 	text-glyph-range.c				\
 	text-pattern.c					\
