test: Re-enable pass-through
The pass-through test was not updated to the current test conventions
and was not enabled in the Makefiles.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -228,6 +228,7 @@ test_sources = \
 	paint-with-alpha.c				\
 	partial-clip-text.c				\
 	partial-coverage.c				\
+	pass-through.c					\
 	path-append.c					\
 	path-stroke-twice.c				\
 	path-precision.c				\
